--- a/booking/templates/registerdoctor.html
+++ b/booking/templates/registerdoctor.html
@@ -28,10 +28,10 @@
             </br>
             <label for="specialist" for="specialist">Especialista</label>
             <select class="form-control" name="specialist" id="specialist">
-                <option value="kiniesologia">Kiniesologia</option>
-                <option value="masajista">Masajista</option>
-                <option value="quiropraxia">Quiropraxia</option>
-                <option value="otro">Otro</option>
+                <option value="Kinesiologia">Kinesiologia</option>
+                <option value="Masajista">Masajista</option>
+                <option value="Quiropraxia">Quiropraxia</option>
+                <option value="Otro">Otro</option>
 
             </select>
 
@@ -39,12 +39,12 @@
         </div>
         <div class="form-group">
             </br>
-            
+
             <input class="form-control" type="password" name="password" placeholder="Password">
         </div>
         <div class="form-group">
             </br>
-            
+
             <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
         </div>
         </br>
