--- a/booking/templates/reserva.html
+++ b/booking/templates/reserva.html
@@ -9,7 +9,7 @@
 {% endif %}
 <div class="container">
     <h2>Reserva</h2>
-    <form action="" method="post" id="formreserva">
+    <form method="POST" enctype="multipart/form-data" id="formreserva">
         {% csrf_token %}
 
         <div class="form-group">
@@ -17,7 +17,7 @@
             <p>Nombre y Apellido : {{patient.user.first_name}} {{patient.user.last_name}} </p>
         </div>
         <div class="form-group">
-            </br>
+
 
             {% if patient.phone %}
             <p>Numero de contacto : {{patient.phone}} </p>
@@ -26,37 +26,10 @@
             {% endif%}
         </div>
         <div class="form-group">
-            </br>
+
             <p>Email : {{patient.user.email}} </p>
         </div>
-        <!-- <div class="form-group">
-            </br>
-            <label for="specialist" for="specialist">Seleccione con quien desea la consulta</label>
-            <select class="form-control" name="specialist" id="specialist">
-                <option value="kiniesologia">Kiniesologia</option>
-                <option value="masajista">Masajista</option>
-                <option value="quiropraxia">Quiropraxia</option>
-                <option value="otro">Otro</option>
 
-            </select>
-
-
-        </div>
-        {{form}}
-        <div class="form-group">
-            </br>
-            <label for="specialist" for="specialist">Horario que desea de consulta</label>
-            <select class="form-control" name="specialist" id="specialist">
-                <option value="kiniesologia">Kiniesologia</option>
-                <option value="masajista">Masajista</option>
-                <option value="quiropraxia">Quiropraxia</option>
-                <option value="otro">Otro</option>
-
-            </select>
-        </div> -->
-        <form class="form-group" id="specialist" name="specialist" onchange="dynamicdropdown(this);">
-            {{form }}
-        </form>
         <div>
             </br>
             <div class="category_div" id="category_div">
@@ -69,64 +42,23 @@
                     <option value="otro">Otro</option>
                 </select>
             </div>
+
+            </br>
+
             <div id="time">
             </div>
-            <!-- <label for="status" for="specialist">Horario de Consulta :</label> -->
-            <!-- <script type="text/javascript" language="JavaScript">
-                    document.write('<select class="form-control" name="status" id="status"><option value="">--------</option></select>')
-                </script> -->
-            <!-- <select class="form-control" name="status" id="status">
-                    <option value="">--------</option>
-                </select> -->
-            <!-- <div id="ktime">
-                    {% for time in k.available %}
-                    <option class="kavailable" value="{{time}}">{{time}}</option>
 
-                    {% endfor%}
-                </div> -->
-            <!-- <script type="text/javascript" language="JavaScript">
-                    document.write('<select class="form-control" name="status" id="status"><option value="">--------</option></select>')
-                </script> -->
+            </br>
 
-
-
-            <!-- {{form}}
-            {{formTime}} -->
-            <!-- {{ k.available}} -->
+            <div class="form-group" id="formdrop" name="formdrop">
+                {{form }}
+            </div>
 
             <br></br>
-            <!-- <div class="sub_category_div" id="kavailable">
-                <label for="ktime" for="forario">Horario de Consulta :</label>
-                <div>
-                    <select class="form-control" id="ktime">
-                        {% for time in k.available %}
-                        <option class="kavailable" value="{{time}}">{{time}}</option>
 
-                        {% endfor%}
-                    </select>
-                </div>
-                <script type="text/javascript" language="JavaScript">
-                    document.write('<select class="form-control" name="status" id="status"><option value="">--------</option></select>')
-                </script>
-                {% for value, text in form.providers.field.choices %}
-                <div class="ui slider checkbox">
-                    <input id="id_providers_{{ forloop.counter0 }}" name="{{ form.providers.name }}" type="checkbox"
-                        value="{{ value }}" {% if value in checked_providers %} checked="checked" {% endif %}>
-                    <label>{{ text }}</label>
-                </div>
-                {% endfor %} -->
-            <!-- <noscript>
-                    <select class="form-control" id="statusd" name="statusd">
-                        <option value="open">09:00 – 10:00</option>
-                        <option value="delivered">DELIVERED</option>
-                        <option value="open">09:00 – 10:00</option>
-                        <option value="delivered">DELIVERED</option>
 
-                    </select>
-                </noscript> -->
-            </br>
             {% if patient.phone %}
-            <input class="btn btn-primary" type="submit" id="reserva" value="Reservar">
+            <input class=" btn btn-primary" type="submit" id="reserva" value="Reservar">
             {%else %}
             <a href="{% url 'perfil'%}">Actualiza los datos antes de continuar </a>
             {% endif%}
