--- a/booking/templates/registerdoctor.html
+++ b/booking/templates/registerdoctor.html
@@ -8,7 +8,7 @@
 <div class="container">{{ message }}</div>
 {% endif %}
 <div class="container">
-    <h2>Register Doctors</h2>
+    <p class="fs-2">Register Doctors</p>
     <form action="" method="post">
         {% csrf_token %}
 
