--- a/booking/templates/registerpatient.html
+++ b/booking/templates/registerpatient.html
@@ -8,7 +8,7 @@
 <div class="container">{{ message }}</div>
 {% endif %}
 <div class="container">
-    <h2>Register</h2>
+    <p class="fs-2">Register</p>
     <form id="formPatient" method="post">
         {% csrf_token %}
 
