--- a/booking/templates/index.html
+++ b/booking/templates/index.html
@@ -4,15 +4,78 @@
 {% block body %}
 
 
+<div class="bg-image" style="
+height: 50vh;
+ 
+  background-size:100% 100%;
+  background-repeat:no-repeat;
+ background-size: cover;
+ background-position: top;
+    background-image: url('https://saludyvida.tips/wp-content/uploads/2023/01/top-view-of-decorative-heart-and-stethoscope-on-bl-2022-12-16-21-20-39-utc.jpg');
+   
+  ">
+    <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+        <div class="d-flex justify-content-center align-items-center h-100">
+            <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white">
+                <div class="container-fluid" style="padding: 25px;"></div>
+                <p class="fs-1 fw-bold">Terapia Natural con Kinesiología</p>
 
-
-<div class="container" id="div_inicio">
-    <h2>Clinica </h2>
+                <p class="fs-4">
+                    No invasiva, con la que se puede tratar y mejorar cualquier desequilibrio a nivel
+                    fisico, emocional o
+                    mental.
+                    Ayuda a mejorar y optimizar el desarrollo de cualquier disciplina deportiva, artistica, asi como
+                    puede mejorar la
+                    concentracion.
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div id="div_consultas"></div>
-<div id="div_reservas"></div>
-<div id="div_datos"></div>
+<div id="carouselExampleCaptions" class="carousel slide">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(23).webp" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+
 
 
 {% endblock %}
