--- a/booking/templates/layout.html
+++ b/booking/templates/layout.html
@@ -9,15 +9,17 @@
     <title>{% block title %}Clinica{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- <link href="{% static 'styles.css' %}" rel="stylesheet"> -->
-
+    <link href="{% static 'styles.css' %}" rel="stylesheet">
+    <script src="{% static 'inbox.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg " style="background-color: #e3f2fd; padding: 15px">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Clinica</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -69,30 +71,29 @@
                         <a class="nav-link" href="{% url 'login' %}">Log In</a>
                     </li>
                     {% endif %}
+
+
                 </ul>
-                <div class="container">
-
+                <div class="d-flex">
                     {% if user.is_authenticated %}
-                    <div class="container"></div>
-                    <p>Signed in as <strong>{{ user.first_name }}</strong></p>
-                </div>
-                {% else %}
-                Not signed in.
-                {% endif %}
+                    <div class="container">
 
+                        <p style="float: right; margin-bottom: 0;">Signed in as <strong>{{ user.first_name }}</strong>
+                        </p>
+                        {% else %}
+                        <p>Not signed in</p>
+                        {% endif %}
+
+                    </div>
+                </div>
             </div>
-        </div>
         </div>
     </nav>
 
-    <hr>
-    <script src="{% static 'inbox.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
+
+
+
+
     {% block body %}
 
     {% endblock %}
