--- a/booking/templates/profiledoctor.html
+++ b/booking/templates/profiledoctor.html
@@ -18,8 +18,9 @@
 {% if message %}
 <div>{{ message }}</div>
 {% endif %}
-<div class="container">
-    <h2>Profile {{doctor.user.first_name}} </h2>
+<div class="container-xl" style=" padding: 25px;">
+
+    <p class="fs-2">Profile {{doctor.user.first_name}} </p>
     <table class="table">
         <!-- <thead>
             <tr>
@@ -33,22 +34,26 @@
             <tr id="tname">
                 <th scope="row">Name :</th>
                 <td id="fname">{{doctor.user.first_name}}</td>
-                <td colspan="2" id="nbutton"><button id="buttonEditN" onclick="editFirst()"> Edit </button></td>
+                <td colspan="2" id="nbutton"><button id="buttonEditN" class="btn btn-secondary" onclick="editFirst()">
+                        Edit </button></td>
             </tr>
             <tr id="tlast">
                 <th scope="row">Last Name :</th>
                 <td id="lname">{{doctor.user.last_name}}</td>
-                <td colspan="2" id="lbutton"><button id="buttonEditL" onclick="editLast()"> Edit </button></td>
+                <td colspan="2" id="lbutton"><button id="buttonEditL" class="btn btn-secondary" onclick="editLast()">
+                        Edit </button></td>
             </tr>
             <tr id="tgender">
                 <th scope="row">Gender :</th>
                 <td colspan="1" id="gender">{{doctor.gender}}</td>
-                <td colspan="2" id="gbutton"><button id="buttonEditG" onclick="editGender()"> Edit </button></td>
+                <td colspan="2" id="gbutton"><button id="buttonEditG" class="btn btn-secondary" onclick="editGender()">
+                        Edit </button></td>
             </tr>
             <tr id=" tphone">
                 <th scope="row">Phone :</th>
                 <td colspan="1" id="pphone">{{doctor.phone}}</td>
-                <td colspan="2" id="tbutton"><button id="buttonEdit" onclick="editPhone()"> Edit </button></td>
+                <td colspan="2" id="tbutton"><button id="buttonEdit" class="btn btn-secondary" onclick="editPhone()">
+                        Edit </button></td>
                 <span id="error"></span>
             </tr>
 
@@ -202,7 +207,8 @@
 
 
 
-                <td colspan="2" id="abutton"><button id="buttonEditA" onclick="editAvailable()"> Edit </button></td>
+                <td colspan="2" id="abutton"><button id="buttonEditA" class="btn btn-secondary"
+                        onclick="editAvailable()"> Edit </button></td>
 
 
                 <span id="error"></span>
@@ -212,7 +218,8 @@
             <tr id=" tposition">
                 <th scope="row">Position :</th>
                 <td colspan="1" id="position">{{doctor.position}}</td>
-                <td colspan="2" id="pbutton"><button id="buttonEditP" onclick="editPosition()"> Edit </button></td>
+                <td colspan="2" id="pbutton"><button id="buttonEditP" class="btn btn-secondary"
+                        onclick="editPosition()"> Edit </button></td>
                 <!-- <label for="specialist" for="specialist">Especialista</label>
                 <select class="form-control" name="specialist" id="specialist">
                     <option value="kinesiologia">Kiniesologia</option>
@@ -226,23 +233,93 @@
             <tr id=" tdescription">
                 <th scope="row">Description :</th>
                 <td colspan="1" id="description">{{doctor.description}}</td>
-                <td colspan="2" id="dbutton"><button id="buttonEditD" onclick="editDescription()"> Edit </button></td>
+                <td colspan="2" id="dbutton"><button id="buttonEditD" class="btn btn-secondary"
+                        onclick="editDescription()"> Edit </button></td>
                 <span id="error"></span>
             </tr>
         </tbody>
     </table>
-    <!-- <span class="input-group-text">Gender</span>
-    {% if patient.gender %}
-    <h6> {{patient.gender}} </h6>
-    {% else %}
-    <p> Insert gender</p>
-    {% endif %}
-    <button> Edit</button>
 </div>
-<div class="input-group">
-    <span class="input-group-text">Phone</span>
-    <p> {{patient.phone}} </p>
-    <button> Edit</button> -->
+<div style="display: flex;flex-wrap: wrap;justify-content: space-between; text-align: center; padding: 25px;">
+    {% if appointment.length != 0 %}
+    {% for appoint in appointment %}
+    {% if appoint.approved %}
+    <div>
+        <div>
+
+            <div class="card" style="width: 18rem;margin: 8px;">
+
+
+                <div class="card-body">
+                    <h5 class="card-title">Reserva de {{appoint.patient}} </h5>
+                    <p class="card-text">Patient Phone : {{appoint.patient.phone}}</p>
+                    <p class="card-text">Patient email : {{appoint.patient.user.email}}</p>
+                    <p class="card-text">Comments : {{appoint.comment}}</p>
+                    <p>{{appoint.datetime}}</p>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Cancel Appointment
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Appointment</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    If you continue is not going back , you are going to cancel de session.
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" onclick="deleteAppoint({{appoint.id}})"
+                                        class="btn btn-primary">Cancel Appointment</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        {% endif %}
+        {%endfor%}
+
+        {% for appoint in appointment %}
+        {% if not appoint.approved%}
+        <div>
+
+            <div class="card" style="width: 18rem;margin: 8px;">
+
+
+                <div class="card-body">
+                    <h6 class="card-title">Reserva de {{appoint.patient}} ( Esperando por aprobar... )</h6>
+                    <p class="card-text">Patient Phone : {{appoint.patient.phone}}</p>
+                    <p class="card-text">Patient email : {{appoint.patient.user.email}}</p>
+                    <p class="card-text">Comments : {{appoint.comment}}</p>
+                    <p>{{appoint.datetime}}</p>
+                    <a onclick="approved({{appoint.id}})" class="btn btn-primary">Approve appointmtent</a>
+
+                </div>
+            </div>
+
+
+            {% endif %}
+            {%endfor%}
+
+
+        </div>
+        {%else%}
+
+        <div> No Appoinment Found </div>
+
+        {%endif%}
+
+    </div>
 </div>
 
 
@@ -250,9 +327,6 @@
 
 
 
-
-<div id="div_hclinica"></div>
-<div id="perfil"></div>
 
 
 
