Styling and  edit model and js for appoinment and fix when more than 1 doctor by specialist

--- a/booking/static/styles.css
+++ b/booking/static/styles.css
@@ -4,3 +4,12 @@
   height: 50vh;
   overflow: hidden;
 }
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+footer {
+  margin-top: auto;
+}
