--- a/booking/templates/index.html
+++ b/booking/templates/index.html
@@ -46,22 +46,33 @@ height: 50vh;
         <div class="carousel-item active">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
+                <h5>Kinesiología</h5>
+                <p class="fs-6">Enfoques terapéuticos holísticos que abordan la salud y el bienestar desde una
+                    perspectiva de
+                    conexión entre el cuerpo,
+                    la mente y la energía. La kinesiología energética utiliza técnicas como el test muscular para
+                    evaluar y restablecer el
+                    flujo energético en el cuerpo..</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
+                <h5>Quiropraxia</h5>
+                <p class="fs-6">La quiropraxia está indicada para procesos como afecciones de la columna vertebral,
+                    dolor de espalda,
+                    brazos y piernas</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(23).webp" class="d-block w-100" alt="...">
+            <img src="https://img.freepik.com/psd-gratis/sala-fisioterapia-ia-generativa_587448-2101.jpg?w=1800&t=st=1702062590~exp=1702063190~hmac=19b45907ff87cba1bd80458bf99d7a8b9943fd6de13041e4221a84c48ff2d64a"
+                class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+                <h5>Masajes</h5>
+                <p class="fs-6">Este masaje combina técnicas manuales descontracturantes y relajantes para reducir o
+                    eliminar
+                    tensiones musculares y
+                    mejorar la circulación</p>
             </div>
         </div>
     </div>
