--- a/booking/templates/profiledoctor.html
+++ b/booking/templates/profiledoctor.html
@@ -1,67 +1,51 @@
 {% extends "layout.html" %}
 {% load static %}
 {% block body %}
-<!-- <div class="input-group">
-    <span class="input-group-text">First and last name</span>
-    <p class="h6">{{patient.user.first_name}} </p>
-    <p class="h6"> </p>
-</div>
- <div class="input-group">
-    <span class="input-group-text">Gender</span>
-    <select class="form-select" aria-label="Default select example">
-        <option selected>Gender</option>
-        <option value="1">Male</option>
-        <option value="2">Female</option>
-        <option value="3">Dont want to say</option>
-    </select>
-</div> -->
+
 {% if message %}
 <div>{{ message }}</div>
 {% endif %}
-<div class="container-xl" style=" padding: 25px;">
+<div class="container-fluid" style=" padding: 35px 35px 0px 25px;">
 
     <p class="fs-2">Profile {{doctor.user.first_name}} </p>
     <table class="table">
-        <!-- <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
-            </tr>
-        </thead> -->
+
         <tbody>
             <tr id="tname">
                 <th scope="row">Name :</th>
                 <td id="fname">{{doctor.user.first_name}}</td>
-                <td colspan="2" id="nbutton"><button id="buttonEditN" class="btn btn-secondary" onclick="editFirst()">
+                <td colspan="2" id="nbutton"><button id="buttonEditN" style="float: right;" class="btn btn-secondary"
+                        onclick="editFirst()">
                         Edit </button></td>
             </tr>
             <tr id="tlast">
                 <th scope="row">Last Name :</th>
                 <td id="lname">{{doctor.user.last_name}}</td>
-                <td colspan="2" id="lbutton"><button id="buttonEditL" class="btn btn-secondary" onclick="editLast()">
+                <td colspan="2" id="lbutton"><button id="buttonEditL" style="float: right;" class="btn btn-secondary"
+                        onclick="editLast()">
                         Edit </button></td>
             </tr>
             <tr id="tgender">
                 <th scope="row">Gender :</th>
                 <td colspan="1" id="gender">{{doctor.gender}}</td>
-                <td colspan="2" id="gbutton"><button id="buttonEditG" class="btn btn-secondary" onclick="editGender()">
+                <td colspan="2" id="gbutton"><button id="buttonEditG" style="float: right;" class="btn btn-secondary"
+                        onclick="editGender()">
                         Edit </button></td>
             </tr>
             <tr id=" tphone">
                 <th scope="row">Phone :</th>
                 <td colspan="1" id="pphone">{{doctor.phone}}</td>
-                <td colspan="2" id="tbutton"><button id="buttonEdit" class="btn btn-secondary" onclick="editPhone()">
+                <td colspan="2" id="tbutton"><button id="buttonEdit" style="float: right;" class="btn btn-secondary"
+                        onclick="editPhone()">
                         Edit </button></td>
-                <span id="error"></span>
+
             </tr>
 
             <tr id=" tavailable">
                 <th scope="row">Available :</th>
 
                 <td colspan="1" id="available">
-                    <!-- {{daytime| safe }} -->
+
                     <div id="availabledata">
                         {% if daytime.lunes %}
                         Lunes : {% for time in daytime.lunes %}
@@ -191,23 +175,12 @@
                         <option value="17:00 – 18:00">17:00 – 18:00</option>
                         <option value="18:00 – 19:00">18:00 – 19:00</option>
                     </select>
-                    <!-- <form  action="" method="post">{{form2.as_p}}</form> -->
-                    <!-- <div id="timeform" class="ui slider checkbox">
-                        {% for value, text in form.available.field.choices %}
-                        <form id="formavailable">
-                            <input id="available_{{ forloop.counter0 }}" name="{{ form.available.name }}"
-                                type="checkbox" value="{{ text }}" {% if value in checked_available %} checked="checked"
-                                {% endif %}>
-                            <label>{{ text }}</label>
-                        </form>
-                        {% endfor %}
 
-                    </div> -->
                 </td>
 
 
 
-                <td colspan="2" id="abutton"><button id="buttonEditA" class="btn btn-secondary"
+                <td colspan="2" id="abutton"><button id="buttonEditA" style="float: right;" class="btn btn-secondary"
                         onclick="editAvailable()"> Edit </button></td>
 
 
@@ -218,36 +191,33 @@
             <tr id=" tposition">
                 <th scope="row">Position :</th>
                 <td colspan="1" id="position">{{doctor.position}}</td>
-                <td colspan="2" id="pbutton"><button id="buttonEditP" class="btn btn-secondary"
+                <td colspan="2" id="pbutton"><button id="buttonEditP" style="float: right;" class="btn btn-secondary"
                         onclick="editPosition()"> Edit </button></td>
-                <!-- <label for="specialist" for="specialist">Especialista</label>
-                <select class="form-control" name="specialist" id="specialist">
-                    <option value="kinesiologia">Kiniesologia</option>
-                    <option value="masajista">Masajista</option>
-                    <option value="quiropraxia">Quiropraxia</option>
-                    <option value="otro">Otro</option>
 
-                </select> -->
-                <span id="error"></span>
+
             </tr>
             <tr id=" tdescription">
                 <th scope="row">Description :</th>
                 <td colspan="1" id="description">{{doctor.description}}</td>
-                <td colspan="2" id="dbutton"><button id="buttonEditD" class="btn btn-secondary"
+                <td colspan="2" id="dbutton"><button id="buttonEditD" style="float: right;" class="btn btn-secondary"
                         onclick="editDescription()"> Edit </button></td>
-                <span id="error"></span>
+
             </tr>
         </tbody>
     </table>
 </div>
-<div style="display: flex;flex-wrap: wrap;justify-content: space-between; text-align: center; padding: 25px;">
+<div>
+    <div style="padding: 35px 0 35px 35px">
+        <h5>Nexts Appointments</h5>
+    </div>
     {% if appointment.length != 0 %}
     {% for appoint in appointment %}
     {% if appoint.approved %}
-    <div>
+
+    <div class="d-flex flex-wrap " style=" align-items: center;text-align: center; padding: 25px;">
         <div>
 
-            <div class="card" style="width: 18rem;margin: 8px;">
+            <div class=" card" style="width: 18rem;margin: 8px;">
 
 
                 <div class="card-body">
@@ -277,7 +247,8 @@
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Close</button>
                                     <button type="button" onclick="deleteAppoint({{appoint.id}})"
-                                        class="btn btn-primary">Cancel Appointment</button>
+                                        class="btn btn-primary">Cancel
+                                        Appointment</button>
                                 </div>
                             </div>
                         </div>
@@ -286,14 +257,20 @@
                 </div>
             </div>
         </div>
-        {% endif %}
-        {%endfor%}
+    </div>
 
-        {% for appoint in appointment %}
-        {% if not appoint.approved%}
-        <div>
+    {% endif %}
+    {%endfor%}
 
-            <div class="card" style="width: 18rem;margin: 8px;">
+    <div style="padding: 35px 0 35px 35px">
+        <h5>Appointments for approve</h5>
+    </div>
+    {% for appoint in appointment %}
+    {% if not appoint.approved%}
+    <div class="d-flex flex-wrap " style="align-items: center;padding: 25px;; text-align: center;">
+        <div style="background-color: brown;">
+
+            <div class=" card" style="width: 18rem;margin: 8px;">
 
 
                 <div class="card-body">
@@ -313,13 +290,14 @@
 
 
         </div>
-        {%else%}
-
-        <div> No Appoinment Found </div>
-
-        {%endif%}
-
     </div>
+    {%else%}
+
+    <div> No Appoinment Found </div>
+
+    {%endif%}
+
+</div>
 </div>
 
 
