--- a/booking/templates/profilepatient.html
+++ b/booking/templates/profilepatient.html
@@ -1,24 +1,11 @@
 {% extends "layout.html" %}
 {% load static %}
 {% block body %}
-<!-- <div class="input-group">
-    <span class="input-group-text">First and last name</span>
-    <p class="h6">{{patient.user.first_name}} </p>
-    <p class="h6"> </p>
-</div>
- <div class="input-group">
-    <span class="input-group-text">Gender</span>
-    <select class="form-select" aria-label="Default select example">
-        <option selected>Gender</option>
-        <option value="1">Male</option>
-        <option value="2">Female</option>
-        <option value="3">Dont want to say</option>
-    </select>
-</div> -->
+
 {% if message %}
 <div>{{ message }}</div>
 {% endif %}
-<div class="container-xl" style=" padding: 25px;">
+<div class="container-fluid" style=" padding: 35px;">
 
 
 
@@ -29,7 +16,7 @@
         {%endif%}
     </div>
 
-    <table class="table table-bordered" style="justify-content: center; text-align: center;">
+    <table class="table">
         <!-- <thead>
             <tr>
                 <th scope="col">#</th>
@@ -42,82 +29,149 @@
             <tr id="tname">
                 <th scope="row">Name :</th>
                 <td id="fname">{{patient.user.first_name}}</td>
-                <td colspan="2" id="nbutton"><button id="buttonEditN" class="btn btn-secondary" onclick="editFirst()">
+                <td colspan="2" id="nbutton"><button id="buttonEditN" style="float: right;" class="btn btn-secondary"
+                        onclick="editFirst()">
                         Edit </button></td>
             </tr>
             <tr id="tlast">
                 <th scope="row">Last Name :</th>
                 <td id="lname">{{patient.user.last_name}}</td>
-                <td colspan="2" id="lbutton"><button id="buttonEditL" class="btn btn-secondary" onclick="editLast()">
+                <td colspan="2" id="lbutton"><button id="buttonEditL" style="float: right;" class="btn btn-secondary"
+                        onclick="editLast()">
                         Edit </button></td>
             </tr>
             <tr id="tgender">
                 <th scope="row">Gender :</th>
                 <td colspan="1" id="gender">{{patient.gender}}</td>
-                <td colspan="2" id="gbutton"><button id="buttonEditG" class="btn btn-secondary" onclick="editGender()">
+                <td colspan="2" id="gbutton"><button id="buttonEditG" style="float: right;" class="btn btn-secondary"
+                        onclick="editGender()">
                         Edit </button></td>
             </tr>
             <tr id=" tphone">
                 <th scope="row">Phone :</th>
                 <td colspan="1" id="pphone">{{patient.phone}}</td>
-                <td colspan="2" id="tbutton"><button id="buttonEdit" class="btn btn-secondary" onclick="editPhone()">
+                <td colspan="2" id="tbutton"><button id="buttonEdit" style="float: right;" class="btn btn-secondary"
+                        onclick="editPhone()">
                         Edit </button></td>
-                <span id="error"></span>
+
             </tr>
         </tbody>
     </table>
 </div>
-<div style="display: flex;flex-wrap: wrap;justify-content: space-between; text-align: center; padding: 25px;">
+<div>
+    <div style="padding: 35px 0 35px 35px">
+        <h5>Nexts Appointments</h5>
+    </div>
     {% if appointment.length != 0 %}
     {% for appoint in appointment %}
     {% if appoint.approved %}
-    <div>
+    <div class="d-flex flex-wrap" style="align-items: center;padding: 25px; text-align: center;">
         <div>
-            <div>
-                <div class=" card" style="width: 18rem;margin: 8px;">
 
-
-                    <div class="card-body">
-                        <h5 class="card-title">Reserva de {{appoint.service}} con {{appoint.doctor}}</h5>
-                        <p class="card-text">Comments : {{appoint.comment}}</p>
-                        <p>{{appoint.datetime}}</p>
-                        <a href="#" class="btn btn-primary">Cancel appointmtent</a>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        {% endif %}
-        {%endfor%}
-
-        {% for appoint in appointment %}
-        {% if not appoint.approved%}
-        <div>
 
             <div class=" card" style="width: 18rem;margin: 8px;">
 
 
                 <div class="card-body">
-                    <h6 class="card-title">Reserva de {{appoint.service}} ( Esperando por aprobar... )</h6>
+                    <h5 class="card-title">Reserva con {{appoint.doctor}}</h5>
                     <p class="card-text">Comments : {{appoint.comment}}</p>
                     <p>{{appoint.datetime}}</p>
-                    <a href="#" class="btn btn-primary">Cancel appointmtent</a>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Cancel Appointment
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Appointment</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    If you continue is not going back , you are going to cancel de session.
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" onclick="deleteAppoint({{appoint.id}})"
+                                        class="btn btn-primary">Cancel
+                                        Appointment</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
 
         </div>
+    </div>
+    {% endif %}
+    {%endfor%}
+
+    <div style="padding: 35px 0 35px 35px">
+        <h5>Appointments for approve</h5>
+    </div>
+    {% for appoint in appointment %}
+    {% if not appoint.approved%}
+    <div class="d-flex flex-wrap" style="align-items: center;padding: 0 25px 0 25px; text-align: center; ">
+
+        <div style="background-color: brown;">
+
+            <div class=" card" style="width: 18rem;margin: 8px">
+
+
+                <div class="card-body">
+                    <h6 class="card-title">Reserva con {{appoint.doctor}}( Esperando por
+                        aprobar... )</h6>
+                    <p class="card-text">Comments : {{appoint.comment}}</p>
+                    <p>{{appoint.datetime}}</p>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Cancel Appointment
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Appointment</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    If you continue is not going back , you are going to cancel de session.
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" onclick="deleteAppoint({{appoint.id}})"
+                                        class="btn btn-primary">Cancel
+                                        Appointment</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
         {% endif %}
         {%endfor%}
-
-        {%else%}
-
-
-
-        <div> No Appoinment Found </div>
-
-        {%endif%}
     </div>
+    {%else%}
+
+
+
+    <div> No Appoinment Found </div>
+
+    {%endif%}
+</div>
 </div>
 <!-- <span class="input-group-text">Gender</span>
     {% if patient.gender %}
