fix add user from django admin, post_save if patient or doctor add cancelled to model appointment

--- a/booking/templates/profilepatient.html
+++ b/booking/templates/profilepatient.html
@@ -96,7 +96,7 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Close</button>
-                                    <button type="button" onclick="deleteAppoint({{appoint.id}})"
+                                    <button type="button" onclick="cancelAppoint({{appoint.id}})"
                                         class="btn btn-primary">Cancel
                                         Appointment</button>
                                 </div>
@@ -149,7 +149,7 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Close</button>
-                                    <button type="button" onclick="deleteAppoint({{appoint.id}})"
+                                    <button type="button" onclick="cancelAppoint({{appoint.id}})"
                                         class="btn btn-primary">Cancel
                                         Appointment</button>
                                 </div>
