--- a/booking/templates/profiledoctor.html
+++ b/booking/templates/profiledoctor.html
@@ -246,7 +246,7 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Close</button>
-                                    <button type="button" onclick="deleteAppoint({{appoint.id}})"
+                                    <button type="button" onclick="cancelAppoint({{appoint.id}})"
                                         class="btn btn-primary">Cancel
                                         Appointment</button>
                                 </div>
