--- a/booking/templates/profiledoctor.html
+++ b/booking/templates/profiledoctor.html
@@ -9,7 +9,7 @@
 
     <p class="fs-2">Profile {{doctor.user.first_name}} </p>
     <table class="table">
-
+        
         <tbody>
             <tr id="tname">
                 <th scope="row">Name :</th>
@@ -210,11 +210,12 @@
     <div style="padding: 35px 0 35px 35px">
         <h5>Nexts Appointments</h5>
     </div>
-    {% if appointment.length != 0 %}
-    {% for appoint in appointment %}
-    {% if appoint.approved %}
-
     <div class="d-flex flex-wrap " style=" align-items: center;text-align: center; padding: 25px;">
+        {% if appointment.length != 0 %}
+        {% for appoint in appointment %}
+        {% if appoint.approved and not appoint.canceled %}
+
+
         <div>
 
             <div class=" card" style="width: 18rem;margin: 8px;">
@@ -257,18 +258,19 @@
                 </div>
             </div>
         </div>
+
+
+        {% endif %}
+        {%endfor%}
     </div>
-
-    {% endif %}
-    {%endfor%}
-
     <div style="padding: 35px 0 35px 35px">
         <h5>Appointments for approve</h5>
     </div>
-    {% for appoint in appointment %}
-    {% if not appoint.approved%}
     <div class="d-flex flex-wrap " style="align-items: center;padding: 25px;; text-align: center;">
-        <div style="background-color: brown;">
+        {% for appoint in appointment %}
+        {% if not appoint.approved and not appoint.canceled%}
+
+        <div style="background-color: rgb(240, 201, 96)">
 
             <div class=" card" style="width: 18rem;margin: 8px;">
 
@@ -290,13 +292,71 @@
 
 
         </div>
+
+        {%else%}
+
+        <div> No Appoinment Found </div>
+
+        {%endif%}
     </div>
-    {%else%}
+    <div style="padding: 35px 0 35px 35px">
+        <h5>Canceled Appointments</h5>
+    </div>
+    <div class="d-flex flex-wrap" style="align-items: center;padding: 0 0 25px 25px; text-align: center;">
 
-    <div> No Appoinment Found </div>
+        {% for appoint in appointment %}
+        {% if appoint.canceled %}
+        <div>
+            <div style="background-color: brown">
 
-    {%endif%}
 
+                <div class=" card" style="width: 18rem;margin: 8px;">
+
+
+                    <div class="card-body">
+                        <h5 class="card-title">Reserva de {{appoint.patient}}</h5>
+                        <p class="card-text">Comments : {{appoint.comment}}</p>
+                        <p>{{appoint.datetime}}</p>
+                        <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            Delete Appointment
+                        </button>-->
+
+                        <!-- Modal -->
+                        <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Appointment</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        If you continue is not going back , you are going to remove from the database.
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                        <button type="button" onclick="deleteAppoint({{appoint.id}})"
+                                            class="btn btn-primary">Delete
+                                            Appointment</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>-->
+
+
+                    </div>
+                </div>
+
+            </div>
+            {% endif %}
+            {%endfor%}
+        </div>
+
+
+    </div>
 </div>
 </div>
 
