--- a/booking/templates/profiledoctor.html
+++ b/booking/templates/profiledoctor.html
@@ -227,165 +227,204 @@
         </div>
     </div>
 </div>
-<div>
-    <div style="padding: 35px 0 35px 35px">
-        <h5>Nexts Appointments</h5>
-    </div>
-    <div class="d-flex flex-wrap "
-        style=" align-items: center;text-align: center; padding: 25px; background-color: beige;">
-        {% if appointment.length != 0 %}
-        {% for appoint in appointment %}
-        {% if appoint.approved and not appoint.canceled %}
+<div class="container-fluid" style=" padding: 35px;">
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    <span id="name">Nexts Appointments</span>
+                    <span class="btn btn-outline-success" id="count" role="alert">{{count_approved}}
+                    </span>
+                </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    <div class="d-flex flex-wrap " style=" align-items: center;text-align: center; padding: 25px;">
+                        {% if appointment.length != 0 %}
+                        {% for appoint in appointment %}
+                        {% if appoint.approved and not appoint.canceled %}
 
 
-        <div>
+                        <div style="background-color: rgb(23, 82, 0)">
 
-            <div class=" card" style="width: 18rem;margin: 8px;">
+                            <div class=" card" style="width: 18rem;margin: 8px;">
 
 
-                <div class="card-body">
-                    <h5 class="card-title">Reserva de {{appoint.patient}} </h5>
-                    <p class="card-text">Patient Phone : {{appoint.patient.phone}}</p>
-                    <p class="card-text">Patient email : {{appoint.patient.user.email}}</p>
-                    <p class="card-text">Comments : {{appoint.comment}}</p>
-                    <p>{{appoint.datetime}}</p>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Cancel Appointment
-                    </button>
+                                <div class="card-body">
+                                    <h5 class="card-title">Reserva de {{appoint.patient}} </h5>
+                                    <p class="card-text">Patient Phone : {{appoint.patient.phone}}</p>
+                                    <p class="card-text">Patient email : {{appoint.patient.user.email}}</p>
+                                    <p class="card-text">Comments : {{appoint.comment}}</p>
+                                    <p>{{appoint.datetime}}</p>
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                        data-bs-target="#exampleModal">
+                                        Cancel Appointment
+                                    </button>
 
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Appointment</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    If you continue is not going back , you are going to cancel de session.
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Close</button>
-                                    <button type="button" onclick="cancelAppoint({{appoint.id}})"
-                                        class="btn btn-primary">Cancel
-                                        Appointment</button>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="exampleModal" tabindex="-1"
+                                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Delete
+                                                        Appointment
+                                                    </h1>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    If you continue is not going back , you are going to cancel de
+                                                    session.
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary"
+                                                        data-bs-dismiss="modal">Close</button>
+                                                    <button type="button" onclick="cancelAppoint({{appoint.id}})"
+                                                        class="btn btn-primary">Cancel
+                                                        Appointment</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
+
+
+                        {% endif %}
+                        {%endfor%}
+                        {% endif %}
                     </div>
-
                 </div>
             </div>
         </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    <span id="name">Appointments for approve</span>
+                    <span class="btn btn-outline-warning" id="count" role="alert">{{ count_forapproved}}
+                    </span>
+                </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    <div class="d-flex flex-wrap " style="align-items: center;padding: 25px;; text-align: center">
+                        {% for appoint in appointment %}
+                        {% if not appoint.approved and not appoint.canceled%}
+
+                        <div style="background-color: rgb(240, 201, 96)">
+
+                            <div class=" card" style="width: 18rem;margin: 8px;">
 
 
-        {% endif %}
-        {%endfor%}
+                                <div class="card-body">
+                                    <h6 class="card-title">Reserva de {{appoint.patient}} ( Esperando por aprobar... )
+                                    </h6>
+                                    <p class="card-text">Patient Phone : {{appoint.patient.phone}}</p>
+                                    <p class="card-text">Patient email : {{appoint.patient.user.email}}</p>
+                                    <p class="card-text">Comments : {{appoint.comment}}</p>
+                                    <p>{{appoint.datetime}}</p>
+                                    <a onclick="approved({{appoint.id}})" class="btn btn-primary">Approve
+                                        appointmtent</a>
 
-    </div>
-    <div style="padding: 35px 0 35px 35px">
-        <h5>Appointments for approve</h5>
-    </div>
-    <div class="d-flex flex-wrap "
-        style="align-items: center;padding: 25px;; text-align: center; background-color: bisque;">
-        {% for appoint in appointment %}
-        {% if not appoint.approved and not appoint.canceled%}
-
-        <div style="background-color: rgb(240, 201, 96)">
-
-            <div class=" card" style="width: 18rem;margin: 8px;">
-
-
-                <div class="card-body">
-                    <h6 class="card-title">Reserva de {{appoint.patient}} ( Esperando por aprobar... )</h6>
-                    <p class="card-text">Patient Phone : {{appoint.patient.phone}}</p>
-                    <p class="card-text">Patient email : {{appoint.patient.user.email}}</p>
-                    <p class="card-text">Comments : {{appoint.comment}}</p>
-                    <p>{{appoint.datetime}}</p>
-                    <a onclick="approved({{appoint.id}})" class="btn btn-primary">Approve appointmtent</a>
-
-                </div>
-            </div>
-
-
-
-
-
-        </div>
-
-
-        {% endif %}
-        {%endfor%}
-        {%else%}
-
-        <div> No Appoinment Found </div>
-        {% endif %}
-    </div>
-    <div style="padding: 35px 0 35px 35px">
-        <h5>Canceled Appointments</h5>
-    </div>
-
-    <div class="d-flex flex-wrap" style="align-items: center;padding: 0 0 25px 25px; text-align: center;">
-
-        {% for appoint in appointment %}
-        {% if appoint.canceled %}
-        <div style="background-color: brown">
-
-
-
-            <div class=" card" style="width: 18rem;margin: 8px;">
-
-
-                <div class="card-body">
-                    <h5 class="card-title">Reserva de {{appoint.patient}}</h5>
-                    <p class="card-text">Comments : {{appoint.comment}}</p>
-                    <p>{{appoint.datetime}}</p>
-                    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">
-                            Delete Appointment
-                        </button>-->
-
-                    <!-- Modal -->
-                    <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                            aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Appointment</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        If you continue is not going back , you are going to remove from the database.
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                            data-bs-dismiss="modal">Close</button>
-                                        <button type="button" onclick="deleteAppoint({{appoint.id}})"
-                                            class="btn btn-primary">Delete
-                                            Appointment</button>
-                                    </div>
                                 </div>
                             </div>
-                        </div>-->
 
 
+
+
+
+                        </div>
+
+
+                        {% endif %}
+                        {%endfor%}
+
+
+                    </div>
                 </div>
             </div>
-
         </div>
-        {% endif %}
-        {%endfor%}
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    <span id="name">Canceled Appointment </span>
+                    <span id="count" class="btn btn-outline-danger " role="alert">{{ count_canceled}}
+                    </span>
+                </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    <div class="d-flex flex-wrap"
+                        style="align-items: center;padding: 0 0 25px 25px; text-align: center;">
+
+                        {% for appoint in appointment %}
+                        {% if appoint.canceled %}
+                        <div style="background-color: brown">
 
 
 
+                            <div class=" card" style="width: 18rem;margin: 8px;">
+
+
+                                <div class="card-body">
+                                    <h5 class="card-title">Reserva de {{appoint.patient}}</h5>
+                                    <p class="card-text">Comments : {{appoint.comment}}</p>
+                                    <p>{{appoint.datetime}}</p>
+                                    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                            data-bs-target="#exampleModal">
+                                            Delete Appointment
+                                        </button>-->
+
+                                    <!-- Modal -->
+                                    <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                            aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Appointment</h1>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                            aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        If you continue is not going back , you are going to remove from the database.
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary"
+                                                            data-bs-dismiss="modal">Close</button>
+                                                        <button type="button" onclick="deleteAppoint({{appoint.id}})"
+                                                            class="btn btn-primary">Delete
+                                                            Appointment</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>-->
+
+
+                                </div>
+                            </div>
+
+                        </div>
+                        {% endif %}
+                        {%endfor%}
+
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-</div>
 
+</div>
 
 
 
