--- a/booking/templates/reserva.html
+++ b/booking/templates/reserva.html
@@ -2,11 +2,22 @@
 {% load static %}
 {% block body %}
 
-
-
-{% if message %}
-<div class="container">{{ message }}</div>
+<!-- <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
+    <div id="msg">{{ message }}</div>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div> -->
+{% if messages %}
+{% for message in messages %}
+<div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
+    <div id="msg">{{ message }}</div>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endfor %}
 {% endif %}
+<!-- {% if message %}
+<div>{{ message }}</div>
+{% endif %} -->
+
 <div class="container-fluid" style=" padding: 25px;">
     <p class="fs-2">Reserva</p>
     <form method="POST" enctype="multipart/form-data" id="formreserva">
@@ -62,7 +73,7 @@
 
             <br></br>
 
-           
+
 
             {% if patient.phone %}
             <input class=" btn btn-primary" type="submit" id="reserva" value="Reservar">
